# safemirror

./: .env.example  .env.prod.example  .gitignore  CLAUDE.md  DESIGN.md  Dockerfile  Dockerfile.prod  LICENSE  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements-enterprise.txt  requirements.txt
.github/workflows/: test.yml
config/: config.yaml.example  multi-format.yaml
docs/: ADMIN_GUIDE.md  DEMO_SCRIPT.md  DEPLOYMENT.md  DEPLOYMENT.md.old  DEVELOPMENT.md  ENHANCED_SECURITY.md  MULTI_FORMAT.md  PERFORMANCE_REPORT.md  PHASE1_PLAN.md  PHASE1_STATUS.md  PHASE4_COMPLETION_REPORT.md  SECRETS_MANAGEMENT.md  SECURITY.md  SECURITY_ASSESSMENT.md  SafeMirror.postman_collection.json  TESTING.md  TLS_SETUP.md  USER_GUIDE.md  VALIDATION_CHECKLIST.md
enterprise/api/: deps.py  main.py
enterprise/api/middleware/: __init__.py  audit.py  rate_limit.py  security_headers.py
enterprise/api/routers/: __init__.py  api_keys.py  approvals.py  audit.py  auth.py  health.py  mirror_assignments.py  mirrors.py  notifications.py  packages.py  policies.py  roles.py  scans.py
enterprise/api/schemas/: auth.py  common.py
enterprise/core/: api_key.py  config.py  password_reset.py  secrets.py  security.py
enterprise/core/approval/: __init__.py  machine.py  service.py  states.py
enterprise/core/policy/: __init__.py  engine.py  rules.py
enterprise/core/rbac/: __init__.py  checker.py  permissions.py  roles.py
enterprise/db/: seed.py  session.py
enterprise/migrations/: env.py
enterprise/services/: __init__.py  notifications.py  scanner_integration.py
enterprise/workers/: __init__.py  scanner_tasks.py
frontend/: .env.production  Dockerfile.prod  next.config.ts  package-lock.json  package.json  tailwind.config.js
helm/safemirror/: Chart.yaml  values.yaml
nginx/: nginx.conf
nginx/conf.d/: safemirror.conf
scripts/: detect-changes.sh  dev.sh  migrate.sh  publish-approved.sh  rescan-packages.sh  run-pipeline.sh  setup.sh  sync-mirror.sh  upgrade.sh
scripts/lib/: common.sh
security/: SAST_REPORT.md  bandit-report.json  npm-audit.json
src/common/: __init__.py  config.py  logger.py
src/formats/: __init__.py  apk.py  base.py  deb.py  npm.py  registry.py  rpm.py  sdist.py  wheel.py
src/repos/: __init__.py  aptly.py  base.py  registry.py
src/scanner/: __main__.py  binary_checker.py  enhanced_scanner.py  integrity_checker.py  scan_packages.py  script_analyzer.py  virus_scanner.py
tests/: conftest.py  factories.py  pyproject.toml  test_enhanced_scanner.py
tests/benchmark/: __init__.py  test_package_performance.py  test_scan_performance.py
tests/fixtures/: __init__.py  conftest.py  generate_packages.py
tests/integration/: __init__.py  test_db_fixtures.py  test_migrations.py  test_multi_format.py  test_package_approval_flow.py  test_scan_pipeline.py
tests/unit/: test_api_keys.py  test_health.py  test_password_reset.py  test_sessions.py
tests/unit/common/: test_config.py
tests/unit/enterprise/: test_approval_workflow.py  test_rbac.py
tests/unit/formats/: __init__.py  test_apk.py  test_base.py  test_corrupt_packages.py  test_deb.py  test_malicious_paths.py  test_npm.py  test_registry.py  test_rpm.py  test_sdist.py  test_wheel.py
tests/unit/repos/: __init__.py  test_aptly.py  test_base.py  test_registry.py
tests/unit/scanner/: test_binary_checker_extended.py  test_format_scanners.py  test_script_patterns.py  test_virus_scanner.py
(+66 files in other folders)
